--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auros",
   "version": "1.0.0",
   "description": "A silly Discord Bot",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "main": "node .",
     "watch": "nodemon ."
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Peny835/Auros#readme",
   "dependencies": {
     "chalk": "^4.1.2",
+    "deep-diff": "^1.0.2",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "util": "^0.12.5"
