--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^2.4.0",
     "@discordjs/voice": "^0.18.0",
-    "@distube/ytdl-core": "^4.15.1",
     "axios": "^1.7.8",
     "chalk": "^4.1.2",
     "circular-json": "^0.5.9",
@@ -31,6 +30,8 @@
     "dotenv": "^16.4.5",
     "flatted": "^3.3.2",
     "json-bigint": "^1.0.0",
+    "lavalink-client": "^2.4.1",
+    "mongoose": "^8.8.3",
     "util": "^0.12.5"
   }
 }
