--- a/package.json
+++ b/package.json
@@ -18,20 +18,15 @@
   },
   "homepage": "https://github.com/Peny835/Auros#readme",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/rest": "^2.4.0",
-    "@discordjs/voice": "^0.18.0",
     "axios": "^1.7.8",
     "chalk": "^4.1.2",
-    "circular-json": "^0.5.9",
-    "deep-diff": "^1.0.2",
-    "discord-api-types": "^0.37.108",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "flatted": "^3.3.2",
-    "json-bigint": "^1.0.0",
     "lavalink-client": "^2.4.1",
-    "mongoose": "^8.8.3",
+    "mongoose": "^8.8.3"
+  },
+  "devDependencies": {
     "util": "^0.12.5"
   }
 }
