modified:   .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-token = "Your bot token"
+token=your_token
+mongodb=mongodb_url (if your server doesn't use tls you need to disable it in db_handler.js)
+TEST_SERVER=test_server_id
+CLIENT_ID=your_applications_id
+DEVS=list_of_devs (separated by commas)
+NODE_AUTHORIZATION=lavalink_node_password
+NODE_HOST=lavalink_node_host
+NODE_PORT=lavalink_node_port
+NODE_ID=lavalink_node_name
